--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -8,7 +8,8 @@ footer {
 
 .footer__row1 {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly
 }
 
 .footer__branding, .footer__summary, .footer__about, .footer__tech {
