--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -21,6 +21,10 @@
     margin-left: 0.4em;
 }
 
+.dash__h3--average {
+    text-align: center;
+}
+
 .card__dash--title {
     grid-row: 1;
     grid-column: 1;
@@ -37,7 +41,13 @@
     width: 13em;
 }
 
-.card__dash--progressionMultiBar {
+.card__dash--average {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    grid-row: 2;
+    grid-column: 2;
+    width: 10.5em;
 }
 
 .graph__textContainer {
@@ -46,4 +56,9 @@
 
 .graph__text {
     font-size: 0.7em;
+}
+
+.average__text {
+    font-size: 1.7em;
+    font-weight: var(--weightThin)
 }
