--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -62,3 +62,9 @@
     font-size: 1.7em;
     font-weight: var(--weightThin)
 }
+
+.card__dash--words {
+    grid-row: 3;
+    grid-column: 1 / 3;
+    width: 28em;
+}
