--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,5 +1,6 @@
 .dash__cards {
     display: grid;
+    grid-template-columns: 0.5fr 1fr;
 }
 
 .card__dash {
@@ -28,11 +29,13 @@
 .card__dash--title {
     grid-row: 1;
     grid-column: 1;
+    width: max-content;
 }
 
 .card__dash--goal {
     grid-row: 2;
     grid-column: 1;
+    width: max-content;
 }
 
 .card__dash--progressionBar {
