--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,6 +1,6 @@
 .dash__cards {
-    display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .card__dash {
@@ -27,20 +27,14 @@
 }
 
 .card__dash--title {
-    grid-row: 1;
-    grid-column: 1;
     width: max-content;
 }
 
 .card__dash--goal {
-    grid-row: 2;
-    grid-column: 1;
     width: max-content;
 }
 
 .card__dash--progressionBar {
-    grid-row: 1;
-    grid-column: 2;
     width: 13em;
 }
 
@@ -48,8 +42,6 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    grid-row: 2;
-    grid-column: 2;
     width: 10.5em;
 }
 
@@ -67,7 +59,5 @@
 }
 
 .card__dash--words {
-    grid-row: 3;
-    grid-column: 1 / 3;
     width: 28em;
 }
