--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -57,22 +57,26 @@
     font-weight: var(--weightHeavier);
 }
 
-/* .nav__line {
+.nav__line {
     grid-row-start: 2;
     align-self: self-start;
     border-bottom-style: solid;
     border-bottom-width: 0.25em;
     border-radius: 5em;
     border-color: white;
+    grid-column: 1 / 3;
+    transition: var(--btnHover)
 }
 
 .nav__line--projects {
-    grid-column: 1;
+    margin-right: 4.2em;
+    transition: var(--btnHover)
 }
 
 .nav__line--dashboard {
-    grid-column: 2;
-} */
+    margin-left: 3.5em;
+    transition: var(--btnHover)
+}
 
 .btn__logout {
     display: flex;
