all buttons on projects page have hover effects

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -84,3 +84,12 @@
     padding-bottom: 0.4em;
     margin-right: 0.2em;
 }
+
+.btn__logout:hover {
+    color: var(--darkGray);
+}
+
+.btn__logout:active {
+    font-weight: var(--weightHeavy);
+    color: var(--darkGray);
+}
