--- a/src/components/projects/Project.css
+++ b/src/components/projects/Project.css
@@ -9,3 +9,12 @@
     padding: 0;
     cursor: pointer;
 }
+
+.project__btn:hover {
+    color: var(--lightBlack);
+}
+
+.project__btn:active {
+    color: var(--lightBlack);
+    font-weight: var(--weightHeavier)
+}
