--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 
   --offWhite: #FCFCFC;
   --lightBlack: #171717ff;
+  --lighterBlack: rgb(96, 96, 96);
   --mintBlue: #c3e8e5ff;
   --darkMintBlue: #76cdc7ff;
 
