--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -64,17 +64,23 @@
     border-bottom-width: 0.25em;
     border-radius: 5em;
     border-color: white;
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     transition: var(--btnHover)
 }
 
 .nav__line--projects {
-    margin-right: 4.2em;
+    margin-right: 6.66em;
     transition: var(--btnHover)
 }
 
 .nav__line--dashboard {
     margin-left: 3.5em;
+    margin-right: 2.55em;
+    transition: var(--btnHover)
+}
+
+.nav__line--table {
+    margin-left: 7.5em;
     transition: var(--btnHover)
 }
 
