updated styling and added sorting buttons

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -1,16 +1,25 @@
 .card--table {
-    margin-top: 1em;
+    margin: 1em;
     padding: 0.8em 1em;
+    width: max-content
+}
+
+.table__h2 {
+    font-size: 1.2em;
+    font-weight: var(--weightThin);
+    margin-bottom: 0.2em;
 }
 
 table {
     border-collapse: collapse;
+    font-weight: var(--weightThin)
 }
 
 td {
-    padding: 0.3em 0.8em 0.5em 0.1em;
-    border-right: solid 0.15em var(--mediumGray);
+    padding: 0.6em 0.8em 0.5em 0.1em;
+    border-right: solid 0.15em var(--lightGray);
     text-align: right;
+    font-size: 0.7em;
 }
 
 tbody tr td:last-child {
@@ -19,15 +28,18 @@ tbody tr td:last-child {
 
 thead tr th:first-child {
     border-top-left-radius: 0.5em;
+    padding-left: 0.6em;
 }
 
 thead tr th:last-child {
     border-top-right-radius: 0.5em;
-    padding-right: 0.3em
+    padding-right: 0.6em
 }
 
 th {
+    font-size: 0.8em;
     text-align: left;
     padding: 0 1em 0 0.3em;
-    background-color: var(--mediumGray);
+    font-weight: var(--weightNormal);
+    background-color: var(--lightGray);
 }
