--- a/src/styles/viewHeader.css
+++ b/src/styles/viewHeader.css
@@ -8,6 +8,30 @@
     padding: 0.5em 0;
 }
 
+/* PROJECT VIEW */
+.project__btn {
+    display: flex;
+    align-items: center;
+    font-size: 0.8em;
+    font-weight: var(--weightThin);
+    background-color: transparent;
+    border-style: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+
+.project__btn:hover {
+    color: var(--lightBlack);
+}
+
+.project__btn:active {
+    color: var(--lightBlack);
+    font-weight: var(--weightMedium)
+}
+
+/* TABLE VIEW */
+
 .view__sort {
     display: flex;
     flex-flow: row wrap;
