--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -44,8 +44,14 @@
     margin-left: 15px;
 }
 
-.project__dash {
+.project__table {
     grid-column: 1;
+    grid-row: 5;
+    margin: 0.5em 0 0 15px;
+}
+
+.project__dash {
+    grid-column: 2;
     grid-row: 5;
     margin: 0.5em 0 0 15px;
 }
