--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -21,10 +21,11 @@
 
 .project__h2--card {
     font-size: 1em;
-    grid-column: 1;
+    grid-column: 1 / 3;
     grid-row: 2;
     margin-left: 15px;
 }
+
 
 .project__subtitle {
     font-size: 0.6em;
@@ -32,26 +33,34 @@
     margin-left: 15px;
 }
 
-.project__subtitle--type {
-    grid-column: 1;
+.project__subtitle--container {
+    grid-column: 1 / 3;
     grid-row: 3;
-    margin-left: 15px;
-}
-
-.project__subtitle--date {
-    grid-column: 1;
-    grid-row: 4;
-    margin-left: 15px;
 }
 
 .project__table {
     grid-column: 1;
-    grid-row: 5;
+    grid-row: 6;
     margin: 0.5em 0 0 15px;
 }
 
 .project__dash {
     grid-column: 2;
-    grid-row: 5;
+    grid-row: 6;
     margin: 0.5em 0 0 15px;
+}
+
+.project__goal {
+    grid-column: 1 / 3;
+    grid-row: 5;
+    margin-left: 15px;
+    margin-top: 0.1em;
+}
+
+.project__h3--card {
+    font-size: 0.8em;
+}
+
+.project__p {
+    font-size: 0.7em;
 }
