--- a/src/components/projects/ProjectDotMenu.css
+++ b/src/components/projects/ProjectDotMenu.css
@@ -3,9 +3,7 @@
     position: relative;
     grid-column: 2;
     grid-row: 1;
-    margin-left: 1em;
-    margin-right: 0.5em;
-    margin-top: 0.5em;
+    margin: 0.5em 0.8em 0 0;
     justify-self: end;
     align-self: start;
 }
