--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   /* Colors */
   --fontColor: #333333;
 
+  --lightestGray: #fafafa;
   --lightGray: #F6F6F6;
   --mediumGray: #f1f1f1; 
   --darkGray: #ACACAC;
@@ -21,6 +22,12 @@
 
   --red: #d85656;
   --redActive: #803232;
+
+/* SPECIFIC COLOR LOCATIONS */
+/* FOR EASIER DARK MODE TARGETING */
+--headerBlack: #171717ff;
+--fontColorInactive: #cacaca;
+--inactiveFormField: rgb(246, 246, 246);
 
   /* Fonts */
   --fontFamily: 'Heebo', sans-serif;
