fixed logout and colors stay black

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
 /* FOR EASIER DARK MODE TARGETING */
 --headerBlack: #171717ff;
 --fontColorInactive: #cacaca;
+--fontColorBtn: #FCFCFC;
 --inactiveFormField: rgb(246, 246, 246);
 
   /* Fonts */
