--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -13,7 +13,7 @@ fieldset {
   display: flex;
   flex-flow: column nowrap;
   border: none;
-  margin: 0.7em;
+  margin: 0.4em 0 0.9em 0;
   padding: 0;
 }
 
