--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --shadowGray: #00000008;
 
   --offWhite: #FCFCFC;
+  --black: rgb(7, 7, 7);
   --lightBlack: #171717ff;
   --lighterBlack: rgb(96, 96, 96);
   --mintBlue: #c3e8e5ff;
