--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -3,6 +3,15 @@
     box-shadow: var(--cardDropShadow);
 }
 
+.card__link {
+    display: flex;
+    flex-flow: column nowrap;
+    max-width: max-content;
+    padding: 0.8em;
+    margin: 1em;
+    height: min-content;
+}
+
 .card__noDefault {
     display: flex;
     flex-flow: column nowrap;
