progress form label class change based on active or disabled

--- a/src/components/progress/ProgressForm.css
+++ b/src/components/progress/ProgressForm.css
@@ -29,3 +29,11 @@
     color:var(--fontColorInactive);
     background-color: var(--inactiveFormField);
 }
+
+.label__progress--active {
+    color:var(--fontColor);
+}
+
+.label__progress--inactive {
+    color:var(--fontColorInactive);
+}
