--- a/src/components/icons/Icons.css
+++ b/src/components/icons/Icons.css
@@ -41,6 +41,12 @@
     margin-right: 0.4em;
 }
 
+.icon__graph--link {
+    transform: scale(0.6);
+    height: 4em;
+    width: 4em;
+}
+
 .icon__gear {
     height: 1.6em;
 }
