--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-flow: column nowrap;
     max-width: max-content;
+    width: 5em;
     padding: 0.8em;
     margin: 1em;
     height: min-content;
