--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -62,6 +62,12 @@
     margin: 0.5em 0 0 15px;
 }
 
+.project__dash--btn {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
 .project__goal {
     grid-column: 1 / 3;
     grid-row: 5;
