--- a/src/components/projects/ProjectCard.css
+++ b/src/components/projects/ProjectCard.css
@@ -53,19 +53,15 @@
 .project__table {
     grid-column: 1;
     grid-row: 6;
-    margin: 0.5em 0 0 15px;
+    margin: 0.5em 0 0 0;
+    justify-self: center;
 }
 
 .project__dash {
     grid-column: 2;
     grid-row: 6;
-    margin: 0.5em 0 0 15px;
-}
-
-.project__dash--btn {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
+    margin: 0.5em 0 0.5em 0;
+    justify-self: center;
 }
 
 .project__goal {
