--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -33,9 +33,13 @@
 }
 
 .dash__p {
-    font-size: .8em;
+    font-size: .7em;
     letter-spacing: 0.03em;
     font-weight: var(--weightThin)
+}
+
+.dash__p--goal {
+    margin-bottom: 0.3em;
 }
 
 .card__dash--title {
@@ -43,9 +47,6 @@
     width: max-content;
 }
 
-.card__link--dash {
-    order: 4;
-}
 
 .card__dash--progressionBar {
     order: 3;
@@ -59,7 +60,6 @@
     align-items: center;
     width: 10.5em;
 }
-
 
 .card__dash--words {
     order: 5;
